[package]
name = "zos-types"
version = "0.1.0"
authors = ["dylanVerstraete <dylan_verstraete1@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
